# Audio

./: .gitignore  README.md
SpeakerAPI/: Record.py  Record_Voice.py  Speech.py  record.py
SpeakerAPI/Identification/: IdentifyVoice.py
examples/: CMakeLists.txt  wavrecord.c
libfreenect.modify/examples/: wavrecord.c
libfreenect.modify/src/: audio.c
